Stereo 3D save options missing from save image (F3) #44472

Closed
opened 2015-04-21 20:05:10 +02:00 by john kearvell · 5 comments

System Information
Operating system and graphics card

Lint mint 17
GTX770

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
62e1498
Worked: (optional)
9510137

Short description of error
Not sure if this is a bug as such, or of these options have been moved for saving still images. If it's not a bug, sorry:

The options to save a stereo 3D file such as side by side are missing from the save image window.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
From the default scene, enable stereo 3D. Render (f12), save the image (f3).
Views Format options are missing from the lower left in newer builds.

**System Information** Operating system and graphics card Lint mint 17 GTX770 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 62e1498 Worked: (optional) 9510137 **Short description of error** Not sure if this is a bug as such, or of these options have been moved for saving still images. If it's not a bug, sorry: The options to save a stereo 3D file such as side by side are missing from the save image window. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps From the default scene, enable stereo 3D. Render (f12), save the image (f3). Views Format options are missing from the lower left in newer builds.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JohnKearvell

Added subscriber: @JohnKearvell
Julian Eisel self-assigned this 2015-04-22 01:02:41 +02:00

This issue was referenced by 90b7652334

This issue was referenced by 90b765233496aef50203e589fa8e2910fa980d78
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 90b7652334.

Closed by commit 90b7652334.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44472
No description provided.