Fix T44472: Stereo 3D save options missing in File Browser